fixed sizing issues on mobile

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -10,11 +10,11 @@ html {
 }
 
 header.band {
-	background: #003399;
+	background-color: gray;
 	color: white;
 	text-align: center;
 	overflow: hidden;
-	padding: 10% 0 10% 0;
+	padding: 18% 0% 15% 0%;
 }
 
 h1, h2, h3 {
@@ -34,8 +34,9 @@ header.band h3{
  
 header.band h1 {
 	font-family: 'PT Serif', serif;
+	padding-top: 20px;
 	letter-spacing: 5px;
-    font-size: 3em;
+    font-size: 2.5em;
     font-style: italic;
     line-height: 1em;
     margin-bottom: 1em;
@@ -47,6 +48,7 @@ header.band h1 {
 	header.band.first{
 		background-image:url(../img/bwcover1.png);
 		background-size: 100%;
+		padding: 17% 0 10% 0;
 	}
 
 	header.band.second{
@@ -57,8 +59,14 @@ header.band h1 {
 		overflow: hidden;
 	}
 
-	header.band h1 {
+	header.band h1{
 		font-size: 3.25em; 
+	}
+	.band.main #proj-title{
+		font-size: 4em;
+	}
+	.band.main #top{
+		height: 50px;
 	}
 }
 
@@ -145,7 +153,7 @@ a:hover{
 
 #top{
 	width:100%;
-	height: 50px;
+	height: 75px;
 	top: 0;
 	left: 0;
 	background-color: black;
@@ -194,7 +202,7 @@ a:hover{
 #proj-title{
 	padding-top: 25px;
 	text-transform: uppercase;
-	font-size: 100px;
+	font-size: 2.5em;
 	font-weight: 400;
 	font-style:italic;
 }
